# Network_interpreter

./: Cargo.toml  README.md  ejemplo1.net  ejemplo2.net  todo
config/: arquitectura.md  automaton.aut  automaton.txt  automaton_spec.md  convetions.md  estructuras.md  flujo_datos.md  ll1_table.txt  ll1_table_spec.md  validation_schema.md
docs/: AST_INTEGRATION_SUMMARY.md  LL1_PARSER_ARCHITECTURE.md  LL1_PARSER_COMPLETE.md  LL1_PARSER_TODO.md  conflicts  first_follow.txt  gramatica.txt
src/: ast.rs  error.rs  interpreter.rs  lexer.rs  lexer_bridge.rs  lib.rs  main.rs  parser.rs  semantic.rs  struct  visualizer.rs
src/config/: loader.rs  mod.rs
src/lexer_new/: automaton.rs  error.rs  mod.rs  scanner.rs  token.rs
src/parser_ll1/: first_follow.rs  ll1_table.rs  mod.rs  predictive.rs
