[package]
name = "network_interpreter"
version = "0.2.0"
edition = "2024"

[dependencies]
# Terminal colors (para errores bonitos)
colored = "2.0"
once_cell = "1.19"

# GUI framework para visualización
eframe = "0.29"

[dev-dependencies]
# Para testing
criterion = "0.5"

[lib]
name = "interprete_topologias"
path = "src/lib.rs"

[[bin]]
name = "interprete"
path = "src/main.rs"

[[bin]]
name = "generate_ll1_table"
path = "src/bin/generate_ll1_table.rs"
